--- a/style.css
+++ b/style.css
@@ -2,4 +2,22 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+
+nav a {
+  padding:0 10px 0 10px;
+  background-color:gray;
+}
+
+p #featured-property {
+ width:800px;
+ text-align:center;
+}
+
+#details div {
+  background-color:red; 
+  float: left;
+  display: block;
+  width:25%;
 }
